07-webapp-deployment-ext-ingress-fanout/00-namespace.yaml
# Copyright 2021 DoiT International.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#
# Here we create a namespace used for this lab as an active resource of our workshop cluster.
# This resource will be used in the context of the next yaml manifest files of this lab directory.
# --
apiVersion: v1
kind: Namespace
metadata:
  name: doit-lab-07
