07-webapp-deployment-ext-ingress-fanout/01-static-web-app-deployments.yaml
# Copyright 2021 DoiT International.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#
# --
# @spec: https://kubernetes.io/docs/reference/kubernetes-api/workload-resources/deployment-v1/
#
# @info: Here we create an advanced deployment that describes three nginx-based static web applications
#        for testing fan-out ingress routing within our workshop-cluster. The following images will be deployed:
#
#        - doitlabs/web-app-static:1.0.6        - static-web-app-deployment-v1
#        - doitlabs/web-app-static-blue:1.0.6   - static-web-app-deployment-v2
#        - doitlabs/web-app-static-green:1.0.6  - static-web-app-deployment-v3
# --
#

#
# @info: This is our deployment manifest for web-app-static:1.0.6 (v1/default)
# --
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-web-app-deployment-v1
  namespace: doit-lab-07
  labels:
    k8s-app: static-web-app-v1
    k8s-scope: gke-ws-doit-lab-07
spec:
  replicas: 3
  selector:
    matchLabels:
      k8s-app: static-web-app-v1
  template:
    metadata:
      labels:
        k8s-app: static-web-app-v1
        k8s-scope: gke-ws-doit-lab-07
    spec:
      containers:
      - name: static-web-app-v1-c
        image: doitlabs/web-app-static:1.0.6
---

#
# @info: This is our deployment manifest for web-app-static-blue:1.0.6 (v2)
# --
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-web-app-deployment-v2
  namespace: doit-lab-07
  labels:
    k8s-app: static-web-app-v2
    k8s-scope: gke-ws-doit-lab-07
spec:
  replicas: 3
  selector:
    matchLabels:
      k8s-app: static-web-app-v2
  template:
    metadata:
      labels:
        k8s-app: static-web-app-v2
        k8s-scope: gke-ws-doit-lab-07
    spec:
      containers:
        - name: static-web-app-v2-c
          image: doitlabs/web-app-static-blue:1.0.6
---

#
# @info: This is our deployment manifest for web-app-static-green:1.0.6 (v3)
# --
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-web-app-deployment-v3
  namespace: doit-lab-07
  labels:
    k8s-app: static-web-app-v3
    k8s-scope: gke-ws-doit-lab-07
spec:
  replicas: 3
  selector:
    matchLabels:
      k8s-app: static-web-app-v3
  template:
    metadata:
      labels:
        k8s-app: static-web-app-v3
        k8s-scope: gke-ws-doit-lab-07
    spec:
      containers:
        - name: static-web-app-v3-c
          image: doitlabs/web-app-static-green:1.0.6
