07-webapp-deployment-ext-ingress-fanout/02-static-web-app-deployments.yaml
# Copyright 2021 DoiT International.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#
# --
# @spec: https://kubernetes.io/docs/reference/kubernetes-api/workload-resources/deployment-v1/
#
# @info: Here we create an advanced deployment that describes three nginx-based static web applications
#        for testing fan-out ingress routing within our workshop-cluster.
#        Each deployment will mount a different nginx configuration from ConfigMap.
# --
#

#
# @info: This is our deployment manifest "v1"
# --
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-web-app-deployment-v1
  namespace: doit-lab-07
  labels:
    k8s-app: static-web-app-v1
    k8s-scope: gke-ws-doit-lab-07
spec:
  replicas: 3
  selector:
    matchLabels:
      k8s-app: static-web-app-v1
  template:
    metadata:
      labels:
        k8s-app: static-web-app-v1
        k8s-scope: gke-ws-doit-lab-07
    spec:
      containers:
        - name: static-web-app-v1-c
          image: nginx:alpine
          ports:
            - name: http-80
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html/index.html
              subPath: v1
      volumes:
        - name: html
          configMap:
            name: nginx-html

---
#
# @info: This is our deployment manifest for "v2"
# --
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-web-app-deployment-v2
  namespace: doit-lab-07
  labels:
    k8s-app: static-web-app-v2
    k8s-scope: gke-ws-doit-lab-07
spec:
  replicas: 3
  selector:
    matchLabels:
      k8s-app: static-web-app-v2
  template:
    metadata:
      labels:
        k8s-app: static-web-app-v2
        k8s-scope: gke-ws-doit-lab-07
    spec:
      containers:
        - name: static-web-app-v2-c
          image: nginx:alpine
          ports:
            - name: http-80
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html/v2/index.html
              subPath: v2
      volumes:
        - name: html
          configMap:
            name: nginx-html

---
#
# @info: This is our deployment manifest for "v3"
# --
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-web-app-deployment-v3
  namespace: doit-lab-07
  labels:
    k8s-app: static-web-app-v3
    k8s-scope: gke-ws-doit-lab-07
spec:
  replicas: 3
  selector:
    matchLabels:
      k8s-app: static-web-app-v3
  template:
    metadata:
      labels:
        k8s-app: static-web-app-v3
        k8s-scope: gke-ws-doit-lab-07
    spec:
      containers:
        - name: static-web-app-v3-c
          image: nginx:alpine
          ports:
            - name: http-80
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html/v3/index.html
              subPath: v3
      volumes:
        - name: html
          configMap:
            name: nginx-html
