07-webapp-deployment-ext-ingress-fanout/02-static-web-app-services.yaml
# Copyright 2021 DoiT International.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#
# --
# @spec: https://kubernetes.io/docs/reference/kubernetes-api/service-resources/service-v1/
# @info: https://kubernetes.io/docs/concepts/services-networking/service/
#
# @info: Here we create multiple services for our three deployments for nginx-based static web applications
#
#        - doitlabs/web-app-static:1.0.6        - static-web-app-deployment-v1  - static-web-app-service-v1
#        - doitlabs/web-app-static-blue:1.0.6   - static-web-app-deployment-v2  - static-web-app-service-v2
#        - doitlabs/web-app-static-green:1.0.6  - static-web-app-deployment-v3  - static-web-app-service-v3
# --
#

apiVersion: v1
kind: Service
metadata:
  name: static-web-app-service-v1
  namespace: doit-lab-07
  labels:
    k8s-app: static-web-app-v1
    k8s-scope: gke-ws-doit-lab-07
spec:
  type: NodePort
  selector:
    k8s-app: static-web-app-v1
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: static-web-app-service-v2
  namespace: doit-lab-07
  labels:
    k8s-app: static-web-app-v2
    k8s-scope: gke-ws-doit-lab-07
spec:
  type: NodePort
  selector:
    k8s-app: static-web-app-v2
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
      
---

apiVersion: v1
kind: Service
metadata:
  name: static-web-app-service-v3
  namespace: doit-lab-07
  labels:
    k8s-app: static-web-app-v3
    k8s-scope: gke-ws-doit-lab-07
spec:
  type: NodePort
  selector:
    k8s-app: static-web-app-v3
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
